test/typecheck/pass/issue434.sail
default Order dec

$include <prelude.sail>

$option -strict_var

bitfield b : bits(64) = {
  B : 0
}
