test/typecheck/fail/private_clause.sail
$option -dmagic_hash
default Order dec

$include <prelude.sail>

function private foo() -> unit = ()
